Add responsive CSS for teacher login

--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -238,7 +238,7 @@
         
         <div class="nav-group-title">شؤون الموظفين</div>
         <a href="/admin/enseignants" class="nav-link" data-section="manage_teachers"><i class="fas fa-chalkboard-teacher"></i> <span>إدارة المعلمين</span></a>
-        <a href="/admin/absence-profs" class="nav-link" data-section="teacher_absence"><i class="fas fa-user-clock"></i> <span>غياب المعلمين</span></a>
+       <a href="/admin/substitute" class="nav-link" data-section="teacher_absence"><i class="fas fa-user-clock"></i> <span>إدارة الاحتياط والغياب</span></a>
         <a href="/admin/stars-management" class="nav-link" data-section="stars_excellence"><i class="fas fa-trophy"></i> <span>نجوم التميز</span></a>
 
         <div class="nav-group-title">شؤون الطلاب</div>
@@ -343,7 +343,7 @@
             <p>تسجيل الطلاب الجدد وتوزيع الفصول.</p>
         </div>
 
-        <div class="card c-abs" data-section="teacher_absence" onclick="location.href='/admin/absence-profs'">
+        <div class="card c-abs" data-section="teacher_absence" onclick="location.href='/admin/substitute'">
             <div class="icon-box" style="color:#ef4444;"><i class="fas fa-user-clock"></i></div>
             <h3>الاحتياط والغياب</h3>
             <p>رصد غياب المعلمين وتعيين حصص الاحتياط.</p>
